data/derived/fa15/progs/unify/prog0931.ml.out
Characters 119-143:
  | h::t -> bigAdd((mulByDigit h l1), res)
                  ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
